--- a/Final_AED_Project/src/UserInterface/HospitalAdmin/HospitalSideNavWorkAreaJpanel.form
+++ b/Final_AED_Project/src/UserInterface/HospitalAdmin/HospitalSideNavWorkAreaJpanel.form
@@ -81,7 +81,7 @@
     <Container class="javax.swing.JPanel" name="jPanel3">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="cc" red="cc" type="rgb"/>
+          <Color blue="0" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[280, 840]"/>
@@ -208,7 +208,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="30" y="260" width="200" height="40"/>
+              <AbsoluteConstraints x="30" y="270" width="200" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
