--- a/Final_AED_Project/src/UserInterface/LoginJPanel.form
+++ b/Final_AED_Project/src/UserInterface/LoginJPanel.form
@@ -267,7 +267,7 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/ui/login.jpg"/>
+              <Image iconType="3" name="/ui/Picture/login.jpg"/>
             </Property>
             <Property name="autoscrolls" type="boolean" value="true"/>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
