--- a/Final_AED_Project/src/UserInterface/SystemAdmin/MedicalCareWorkAreaJpanel.form
+++ b/Final_AED_Project/src/UserInterface/SystemAdmin/MedicalCareWorkAreaJpanel.form
@@ -187,7 +187,7 @@
               <Color blue="cd" green="e2" red="f8" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/ui/loginpage.jpg"/>
+              <Image iconType="3" name="/ui/Picture/loginpage.jpg"/>
             </Property>
             <Property name="verticalAlignment" type="int" value="1"/>
           </Properties>
