--- a/Final_AED_Project/src/UserInterface/SystemAdmin/SystemAdminPatientPortalJPanel.form
+++ b/Final_AED_Project/src/UserInterface/SystemAdmin/SystemAdminPatientPortalJPanel.form
@@ -223,12 +223,12 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/UserInterface/SystemAdmin/patient.jpg"/>
+          <Image iconType="3" name="/ui/Picture/patient.jpg"/>
         </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="-60" y="0" width="1020" height="710"/>
+          <AbsoluteConstraints x="-60" y="0" width="1060" height="710"/>
         </Constraint>
       </Constraints>
     </Component>
